--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -9,22 +9,21 @@
   <div class="container">
     <h1>DataChannel messaging test</h1>
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
+    <div id="connection-id"></div>
     <div style="display: flex;">
-      <div>
-        <div id="connection-id"></div>
-        <div style="display: flex;">
-          <input type="text" name="message" />
-          <button id="send-message" disabled>sendMessage</button><br />
-        </div>
-        <button id="start">start</button>
-        <button id="stop" disabled>stop</button><br />
-        <div>
-          <h3>messages</h3>
-          <ul id="received-messages">
-          </ul>
-        </div>
-      </div>
+      <input type="text" name="message" />
+      <button id="send-message" disabled>sendMessage</button><br />
     </div>
+    <button id="start">start</button>
+    <button id="stop" disabled>stop</button>
+    <button id="get-stats">getStats</button><br />
+    <div>
+      <h3>messages</h3>
+      <ul id="received-messages">
+      </ul>
+    </div>
+    <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
+    <div id="stats-report-json"></div>
   </div>
 
   <script type="module" src="./main.mts"></script>
