open data channel をチェックするようにする

--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -18,6 +18,11 @@
     <button id="stop" disabled>stop</button>
     <button id="get-stats">getStats</button><br />
     <div>
+      <h3>messaging</h3>
+      <ul id="messaging">
+      </ul>
+    </div>
+    <div>
       <h3>messages</h3>
       <ul id="received-messages">
       </ul>
