--- a/examples/index.html
+++ b/examples/index.html
@@ -1,24 +1,25 @@
 <html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <title>Sora JavaScript SDK example</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Sora JavaScript SDK example</title>
-</head>
-
-<body>
-  <div class="container">
-    <ul>
-      <li><a href="/sendrecv/">配信視聴サンプル</a></li>
-      <li><a href="/sendonly/">配信サンプル</a></li>
-      <li><a href="/recvonly/">視聴サンプル</a></li>
-      <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
-      <li><a href="/spotlight_sendonly/">スポットライト配信サンプル</a></li>
-      <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
-      <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
-      <li><a href="/messaging/">メッセージングサンプル</a></li>
-      <li><a href="/e2ee/">E2EE配信視聴サンプル</a></li>
-    </ul>
-  </div>
-</body>
-
+  <body>
+    <div class="container">
+      <ul>
+        <li><a href="/sendrecv/">配信視聴サンプル</a></li>
+        <li><a href="/sendonly/">配信サンプル</a></li>
+        <li><a href="/recvonly/">視聴サンプル</a></li>
+        <li>
+          <a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a>
+        </li>
+        <li><a href="/spotlight_sendonly/">スポットライト配信サンプル</a></li>
+        <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
+        <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
+        <li><a href="/messaging/">メッセージングサンプル</a></li>
+        <li><a href="/e2ee/">E2EE配信視聴サンプル</a></li>
+        <li><a href="/audio_sendonly/">音声ビットレートサンプル</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
