main.mts をざっくり書いた(未動作確認)

--- a/examples/audio_sendonly/index.html
+++ b/examples/audio_sendonly/index.html
@@ -20,7 +20,8 @@
         <option value="384">384</option>
       </select>
       <button id="start">start</button>
-      <button id="stop">stop</button>
+      <button id="stop" disabled>stop</button>
+      <button id="get-stats">getStats</button><br />
       <div
         id="stats-report"
         style="white-space: pre-wrap; font-family: monospace"
