audioBitRate を画面から取得出来た

--- a/examples/audio_sendonly/index.html
+++ b/examples/audio_sendonly/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <h1>Audio Sendonly</h1>
-        <select id="audioBitRate">
+        <select id="audio-bit-rate">
         <option value="">指定なし</option>
         <option value="8">8</option>
         <option value="16">16</option>
