固定値で音声ビットレートを指定して、E2E テストを実行する

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
       <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
       <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
       <li><a href="/messaging/">メッセージングサンプル</a></li>
+      <li><a href="/sendonly_audio_bit_rate/">送信音声ビットレートサンプル</a></li>
       <li><a href="/e2ee/">E2EE配信視聴サンプル</a></li>
     </ul>
   </div>
