--- a/examples/sendonly_audio_bit_rate/index.html
+++ b/examples/sendonly_audio_bit_rate/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -12,12 +13,20 @@
     <button id="stop">stop</button>
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
+    <label for="audio-bit-rate">音声ビットレート：</label>
+    <select id="audio-bit-rate">
+      <option value="">未指定</option>
+      <option value="32">32 kbps</option>
+      <option value="64">64 kbps</option>
+      <option value="128">128 kbps</option>
+      <option value="256">256 kbps</option>
+      <option value="384">384 kbps</option>
+    </select><br />
     <audio id="local-audio" autoplay="" playsinline="" controls="" muted=""
       style="width: 320px; height: 240px; border: 1px solid black;"></audio>
     <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
     <div id="stats-report-json"></div>
   </div>
-
   <script type="module" src="./main.mts"></script>
 </body>
 
