--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,7 @@
       <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
       <li><a href="/messaging/">メッセージングサンプル</a></li>
       <li><a href="/sendonly_audio_bit_rate/">送信音声ビットレートサンプル</a></li>
+      <li><a href="/sendonly_audio_codec/">送信音声コーディックサンプル</a></li>
     </ul>
   </div>
 </body>
