--- a/examples/sendonly_audio_codec/index.html
+++ b/examples/sendonly_audio_codec/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sendonly Audio Codec tes</title>
+  <title>Sendonly Audio Codec test</title>
 </head>
 
 <body>
