統合したサンプルページを作成

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,7 @@
       <li><a href="/messaging/">メッセージングサンプル</a></li>
       <li><a href="/sendonly_audio_bit_rate/">送信音声ビットレートサンプル</a></li>
       <li><a href="/sendonly_audio_codec/">送信音声コーディックサンプル</a></li>
+      <li><a href="/sendonly_audio/">送信音声サンプル</a></li>
     </ul>
   </div>
 </body>
