E2E テスト追加

--- a/examples/sendonly_audio/index.html
+++ b/examples/sendonly_audio/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="container">
-    <h1>Sendonly Test</h1>
+    <h1>Sendonly Audio Test</h1>
     <label for="audio-bit-rate">音声ビットレート：</label>
     <select id="audio-bit-rate">
       <option value="">未指定</option>
