コーディック -> コーデック

--- a/examples/sendonly_audio/index.html
+++ b/examples/sendonly_audio/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Sendonly Audio Test</h1>
-    <label for="audio-codec-type">音声コーディック：</label>
+    <label for="audio-codec-type">音声コーデック：</label>
     <select id="audio-codec-type">
       <option value="">未指定</option>
       <option value="OPUS">OPUS</option>
