--- a/examples/sendonly_audio_codec/index.html
+++ b/examples/sendonly_audio_codec/index.html
@@ -14,7 +14,7 @@
     <button id="get-stats">getStats</button>
     <br />
     <div id="connection-id"></div>
-    <label for="audio-codec-type">音声コーディック：</label>
+    <label for="audio-codec-type">音声コーデック：</label>
     <select id="audio-codec-type">
       <option value="">未指定</option>
       <option value="OPUS">OPUS</option>
