ステレオチェック

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
       <li><a href="/sendrecv/">配信視聴サンプル</a></li>
       <li><a href="/sendonly/">配信サンプル</a></li>
       <li><a href="/recvonly/">視聴サンプル</a></li>
+      <li><a href="/check_stereo/">ステレオチェックサンプル</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
       <li><a href="/spotlight_sendonly/">スポットライト配信サンプル</a></li>
       <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
