--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -19,6 +19,10 @@
     <div style="display: flex;">
       <div id="sendonly-stereo"></div>
     </div>
+    <div>
+      <h3>Stereo Waveform</h3>
+      <canvas id="waveform" width="800" height="400"></canvas>
+    </div>
   </div>
   <div class="container">
     <h1>Recvonly Stereo Check</h1>
