一旦ここまで

--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -16,12 +16,9 @@
     <button id="sendonly-start">start</button>
     <button id="sendonly-stop">stop</button>
     <div id="sendonly-connection-id"></div>
-    <div style="display: flex;">
-      <div id="sendonly-stereo"></div>
-    </div>
     <div>
-      <h3>Stereo Waveform</h3>
-      <canvas id="waveform" width="800" height="400"></canvas>
+      <h3>Waveform</h3>
+      <canvas id="sendonly-waveform" width="800" height="400"></canvas>
     </div>
   </div>
   <div class="container">
@@ -29,8 +26,9 @@
     <button id="recvonly-start">start</button>
     <button id="recvonly-stop">stop</button>
     <div id="recvonly-connection-id"></div>
-    <div style="display: flex;">
-      <div id="recvonly-stereo"></div>
+    <div>
+      <h3>Waveform</h3>
+      <canvas id="recvonly-waveform" width="800" height="400"></canvas>
     </div>
   </div>
 
