--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -30,6 +30,7 @@
       <h3>Waveform</h3>
       <canvas id="recvonly-waveform" width="800" height="400"></canvas>
     </div>
+    <audio id="recvonly-audio" controls autoplay muted></audio>
   </div>
 
   <script type="module" src="./main.mts"></script>
