送信チャネル数の表示と difference の値を表示するようにする

--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -18,6 +18,8 @@
     <div id="sendonly-connection-id"></div>
     <div>
       <h3>Waveform</h3>
+      <div id="sendonly-channels"></div>
+      <div id="sendonly-difference-value"></div>
       <canvas id="sendonly-waveform" width="800" height="400"></canvas>
     </div>
   </div>
@@ -28,6 +30,7 @@
     <div id="recvonly-connection-id"></div>
     <div>
       <h3>Waveform</h3>
+      <div id="recvonly-difference-value"></div>
       <canvas id="recvonly-waveform" width="800" height="400"></canvas>
     </div>
     <audio id="recvonly-audio" controls autoplay muted></audio>
