--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -13,8 +13,7 @@
       <label for="sendonly-audio-input">音声入力デバイス：</label>
       <select id="sendonly-audio-input"></select>
     </div>
-    <button id="sendonly-start">start</button>
-    <button id="sendonly-stop">stop</button>
+    <button id="sendonly-connect">connect</button>
     <div id="sendonly-connection-id"></div>
     <div>
       <h3>Waveform</h3>
@@ -25,8 +24,15 @@
   </div>
   <div class="container">
     <h1>Recvonly Stereo Check</h1>
-    <button id="recvonly-start">start</button>
-    <button id="recvonly-stop">stop</button>
+    <div>
+      <label>
+        <input type="radio" name="forceStereoOutput" value="false" checked> forceStereoOutput: false
+      </label>
+      <label>
+        <input type="radio" name="forceStereoOutput" value="true"> forceStereoOutput: true
+      </label>
+    </div>
+    <button id="recvonly-connect">connect</button>
     <div id="recvonly-connection-id"></div>
     <div>
       <h3>Waveform</h3>
