コメントの追加・修正、変数名の修正

--- a/examples/sendonly_audio/index.html
+++ b/examples/sendonly_audio/index.html
@@ -11,13 +11,13 @@
     <h1>Sendonly Audio Test</h1>
     <label for="audio-codec-type">音声コーデック：</label>
     <select id="audio-codec-type">
-      <option value="">未指定</option>
+      <option value="" selected>未指定</option>
       <option value="OPUS">OPUS</option>
     </select>
     <br />
     <label for="audio-bit-rate">音声ビットレート：</label>
     <select id="audio-bit-rate">
-      <option value="">未指定</option>
+      <option value="" selected>未指定</option>
       <option value="32">32 kbps</option>
       <option value="64">64 kbps</option>
       <option value="128">128 kbps</option>
