--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -2,12 +2,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>stereo check</title>
+  <title>Stereo Check</title>
+
+  <style>
+    button {
+      margin: 15px 0;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
+  </style>
 </head>
 
 <body>
+  <h2>Stereo Check</h2>
   <div class="container">
-    <h1>Sendonly Stereo Check</h1>
+    <h2>Sendonly</h2>
     <!-- 音声入力デバイス選択を追加 -->
     <div>
       <label for="sendonly-audio-input">音声入力デバイス：</label>
@@ -23,7 +32,7 @@
     </div>
   </div>
   <div class="container">
-    <h1>Recvonly Stereo Check</h1>
+    <h2>Recvonly</h2>
     <div>
       <label>
         <input type="radio" name="forceStereoOutput" value="false" checked> forceStereoOutput: false
