Compress チェックボックスを追加

--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -14,6 +14,10 @@
       <input type="text" name="message" />
       <button id="send-message" disabled>sendMessage</button><br />
     </div>
+    <div>
+      <input type="checkbox" id="check-compress" checked />
+      <label for="check-compress">Compress</label>
+    </div>
     <button id="start">start</button>
     <button id="stop" disabled>stop</button>
     <button id="get-stats">getStats</button><br />
