チェックボックス化

--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -35,10 +35,7 @@
     <h2>Recvonly</h2>
     <div>
       <label>
-        <input type="radio" name="forceStereoOutput" value="false" checked> forceStereoOutput: false
-      </label>
-      <label>
-        <input type="radio" name="forceStereoOutput" value="true"> forceStereoOutput: true
+        <input type="checkbox" id="forceStereoOutput" name="forceStereoOutput"> forceStereoOutput
       </label>
     </div>
     <button id="recvonly-connect">connect</button>
