start -> connect / stop -> disconnect

--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -14,8 +14,8 @@
       <input type="text" name="message" />
       <button id="send-message" disabled>sendMessage</button><br />
     </div>
-    <button id="start">start</button>
-    <button id="stop" disabled>stop</button>
+    <button id="connect">connect</button>
+    <button id="disconnect" disabled>disconnect</button>
     <button id="get-stats">getStats</button><br />
     <div>
       <h3>messaging</h3>
