--- a/examples/recvonly/index.html
+++ b/examples/recvonly/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>Recvonly test</h1>
-    <button id="start">start</button>
-    <button id="stop">stop</button>
+    <button id="connect">connect</button>
+    <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
     <div style="display: flex;">
