--- a/examples/spotlight_sendonly/index.html
+++ b/examples/spotlight_sendonly/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>Spotlight Sendonly test</h1>
-    <button id="start">start</button>
-    <button id="stop">stop</button><br />
+    <button id="connect">connect</button>
+    <button id="disconnect">disconnect</button><br />
     <div id="connection-id"></div>
     <video id="local-video" autoplay="" playsinline="" controls=""
       style="width: 320px; height: 240px; border: 1px solid black;"></video>
