--- a/examples/sendonly_audio/index.html
+++ b/examples/sendonly_audio/index.html
@@ -25,8 +25,8 @@
       <option value="384">384 kbps</option>
     </select>
     <br />
-    <button id="start">start</button>
-    <button id="stop">stop</button>
+    <button id="connect">connect</button>
+    <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button>
     <br />
     <div id="connection-id"></div>
