--- a/examples/sendrecv/index.html
+++ b/examples/sendrecv/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>Sendrecv test</h1>
-    <button id="start">start</button>
-    <button id="stop">stop</button>
+    <button id="connect">connect</button>
+    <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" muted=""
