--- a/examples/simulcast/index.html
+++ b/examples/simulcast/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>Simulcast test</h1>
-    <button id="start">start</button>
-    <button id="stop">stop</button>
+    <button id="connect">connect</button>
+    <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
     <div>
       <h2>sendonly</h2>
