--- a/examples/spotlight_recvonly/index.html
+++ b/examples/spotlight_recvonly/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>Spotlight Recvonly test</h1>
-    <button id="start">start</button>
-    <button id="stop">stop</button><br />
+    <button id="connect">connect</button>
+    <button id="disconnect">disconnect</button><br />
     <div id="connection-id"></div>
     <div style="display: flex;">
       <div id="remote-videos"></div>
