--- a/examples/spotlight_sendrecv/index.html
+++ b/examples/spotlight_sendrecv/index.html
@@ -11,8 +11,8 @@
     <div style="display: flex;">
       <div>
         <h2>sendrecv1</h2>
-        <button id="sendrecv1-start">start</button>
-        <button id="sendrecv1-stop">stop</button><br />
+        <button id="sendrecv1-connect">connect</button>
+        <button id="sendrecv1-disconnect">disconnect</button><br />
         <video id="sendrecv1-local-video" autoplay="" playsinline="" controls=""
           style="width: 320px; height: 240px; border: 1px solid black;"></video>
         <div id="sendrecv1-connection-id"></div>
@@ -20,8 +20,8 @@
       </div>
       <div>
         <h2>sendrecv2</h2>
-        <button id="sendrecv2-start">start</button>
-        <button id="sendrecv2-stop">stop</button><br />
+        <button id="sendrecv2-connect">connect</button>
+        <button id="sendrecv2-disconnect">disconnect</button><br />
         <video id="sendrecv2-local-video" autoplay="" playsinline="" controls=""
           style="width: 320px; height: 240px; border: 1px solid black;"></video>
         <div id="sendrecv2-connection-id"></div>
