type: connect が送られてるかどうかの e2e test 追加

--- a/examples/sendonly/index.html
+++ b/examples/sendonly/index.html
@@ -14,6 +14,7 @@
     <div id="connection-id"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" muted=""
       style="width: 320px; height: 240px; border: 1px solid black;"></video>
+    <div id="signaling-message"></div>
     <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
     <div id="stats-report-json"></div>
   </div>
