--- a/examples/sendonly/index.html
+++ b/examples/sendonly/index.html
@@ -8,6 +8,7 @@
 <body>
   <div class="container">
     <h1>Sendonly test</h1>
+    <h3 id="sdk-version"></h3>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
