デフォルト追加

--- a/examples/sendrecv/index.html
+++ b/examples/sendrecv/index.html
@@ -10,7 +10,7 @@
     <h1>Sendrecv test</h1>
     <h3 id="sdk-version"></h3>
     <label for="channel-name">チャンネル名:</label>
-    <input type="text" id="channel-name" name="channel-name" value=""><br>
+    <input type="text" id="channel-name" name="channel-name" value="sendrecv"><br>
     <label for="video-codec-type">ビデオコーデックを選択:</label>
     <select id="video-codec-type">
       <option value="" selected>未指定</option>
