メッセージングのサンプルに header のチェックを追加する

--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -18,6 +18,10 @@
       <input type="checkbox" id="check-compress" checked />
       <label for="check-compress">Compress</label>
     </div>
+    <div>
+      <input type="checkbox" id="check-header" />
+      <label for="check-header">Header</label>
+    </div>
     <button id="connect">connect</button>
     <button id="disconnect" disabled>disconnect</button>
     <button id="get-stats">getStats</button><br />
