channel name を指定できるようにする

--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -9,6 +9,8 @@
   <div class="container">
     <h1>DataChannel messaging test</h1>
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
+    <label for="channel-name">チャンネル名:</label>
+    <input type="text" id="channel-name" name="channel-name" value="messaging"><br>
     <div id="connection-id"></div>
     <div style="display: flex;">
       <input type="text" name="message" />
