replace track のサンプルを追加する

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,7 @@
       <li><a href="/recvonly/">視聴サンプル</a></li>
       <li><a href="/check_stereo/">ステレオチェックサンプル</a></li>
       <li><a href="/check_stereo_multi/">ステレオチェックサンプル（マルチストリーム）</a></li>
+      <li><a href="/replace_track/">track 入れ替えサンプル</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
       <li><a href="/spotlight_sendonly/">スポットライト配信サンプル</a></li>
       <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
