WHIP/WHEP を Index に追加

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,8 @@
       <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
       <li><a href="/sendonly_audio/">音声のみ配信サンプル</a></li>
       <li><a href="/messaging/">メッセージングサンプル</a></li>
+      <li><a href="/whip/">WHIP サンプル</a></li>
+      <li><a href="/whep/">WHEP サンプル</a></li>
     </ul>
   </div>
 </body>
