--- a/examples/whip/index.html
+++ b/examples/whip/index.html
@@ -14,6 +14,17 @@
     <h2>Sora WHIP Client</h2>
   </div>
 
+  <label for="channel-name">チャンネル名:</label>
+  <input type="text" id="channel-name" name="channel-name" value="whip-whep"><br>
+  <label for="video-codec-type">ビデオコーデックを選択:</label>
+  <select id="video-codec-type">
+    <option value="AV1" selected>AV1</option>
+    <!--
+    <option value="H264">H264</option>
+    <option value="H265">H265</option>
+    -->
+  </select><br>
+
   <button id="connect">connect</button>
   <button id="disconnect">disconnect</button>
 
