まずはテストはスキップでコミット

--- a/examples/whip/index.html
+++ b/examples/whip/index.html
@@ -31,6 +31,8 @@
   <p>
     <video id="local-video" autoplay playsinline muted></video>
   </p>
+
+  <div id="connection-state"></div>
   <script type="module" src="./main.mts"></script>
 </body>
 
