examples を新しく準備する

--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -8,17 +8,18 @@
 <body>
   <div class="container">
     <ul>
-      <li><a href="/sendrecv/">配信視聴サンプル</a></li>
-      <li><a href="/sendonly/">配信サンプル</a></li>
-      <li><a href="/recvonly/">視聴サンプル</a></li>
-      <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
-      <li><a href="/spotlight_sendonly/">スポットライト配信サンプル</a></li>
-      <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
-      <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
-      <li><a href="/sendonly_audio/">音声のみ配信サンプル</a></li>
-      <li><a href="/messaging/">メッセージングサンプル</a></li>
-      <li><a href="/whip/">WHIP サンプル</a></li>
-      <li><a href="/whep/">WHEP サンプル</a></li>
+      <li><a href="/sendrecv/">配信視聴テスト</a></li>
+      <li><a href="/sendonly/">配信テスト</a></li>
+      <li><a href="/recvonly/">視聴テスト</a></li>
+      <li><a href="/spotlight_sendrecv/">スポットライト配信視聴テスト</a></li>
+      <li><a href="/spotlight_sendonly/">スポットライト配信テスト</a></li>
+      <li><a href="/spotlight_recvonly/">スポットライト視聴テスト</a></li>
+      <li><a href="/simulcast/">サイマルキャスト配信/視聴テスト</a></li>
+      <li><a href="/sendonly_audio/">音声のみ配信テスト</a></li>
+      <li><a href="/messaging/">メッセージングテスト</a></li>
+      <li><a href="/data_channel_signaling_only/">データチャンネルテスト</a></li>
+      <li><a href="/whip/">WHIP テスト</a></li>
+      <li><a href="/whep/">WHEP テスト</a></li>
     </ul>
   </div>
 </body>
