--- a/examples/sendonly/index.html
+++ b/examples/sendonly/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sendonly test</title>
+  <title>Sendonly サンプル</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Sendonly test</h1>
+    <h1>Sendonly サンプル</h1>
     <h3 id="sdk-version"></h3>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
