--- a/examples/index.html
+++ b/examples/index.html
@@ -11,8 +11,8 @@
       <li><a href="/sendrecv/">配信視聴サンプル</a></li>
       <li><a href="/sendonly/">配信サンプル</a></li>
       <li><a href="/recvonly/">視聴サンプル</a></li>
-      <li><a href="/check_stereo/">ステレオチェックサンプル</a></li>
-      <li><a href="/check_stereo_multi/">ステレオチェックサンプル（マルチストリーム）</a></li>
+      <li><a href="/check_stereo/">ステレオチェックシンプルサンプル</a></li>
+      <li><a href="/check_stereo_multi/">ステレオチェックマルチサンプル</a></li>
       <li><a href="/replace_track/">track 入れ替えサンプル</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
       <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
