--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Messaging</title>
+  <title>リアルタイムメッセージングサンプル</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>DataChannel messaging test</h1>
+    <h1>リアルタイムメッセージングサンプル</h1>
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
     <h2>sora-js-sdk version: <span id="sora-js-sdk-version"></span></h2>
     <label for="channel-name">チャンネル名:</label>
