--- a/examples/replace_track/index.html
+++ b/examples/replace_track/index.html
@@ -2,15 +2,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sendrecv test</title>
+  <title>replaceTrack サンプル</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Replace track test</h1>
+    <h1>replaceTrack サンプル</h1>
     <h3 id="sdk-version"></h3>
-    <label for="channel-name">チャンネル名:</label>
-    <input type="text" id="channel-name" name="channel-name" value="replace_track"><br>
     <label for="video-codec-type">ビデオコーデックを選択:</label>
     <select id="video-codec-type">
       <option value="" selected>未指定</option>
