--- a/examples/sendrecv/index.html
+++ b/examples/sendrecv/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sendrecv test</title>
+  <title>Sendrecv サンプル</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Sendrecv test</h1>
+    <h1>Sendrecv サンプル</h1>
     <h3 id="sdk-version"></h3>
     <label for="video-codec-type">ビデオコーデックを選択:</label>
     <select id="video-codec-type">
