--- a/examples/simulcast/index.html
+++ b/examples/simulcast/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simulcast test</title>
+  <title>Simulcast サンプル</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Simulcast test</h1>
+    <h1>Simulcast サンプル</h1>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
