--- a/examples/check_stereo/index.html
+++ b/examples/check_stereo/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Stereo Check</title>
+  <title>Stereo Check シンプルサンプル</title>
 
   <style>
     button {
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <h2>Stereo Check</h2>
+  <h2>Stereo Check サンプル</h2>
   <div class="container">
     <h2>Sendonly</h2>
     <!-- 音声入力デバイス選択を追加 -->
