TEST_API_URL の間違い

--- a/e2e-tests/data_channel_signaling_only/index.html
+++ b/e2e-tests/data_channel_signaling_only/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sendonly test</title>
+  <title>DataChannelSignalingOnly test</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Sendonly test</h1>
+    <h1>DataChannelSignalingOnly test</h1>
     <h3 id="sdk-version"></h3>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
