--- a/e2e-tests/whip/index.html
+++ b/e2e-tests/whip/index.html
@@ -3,10 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%2250%%22 y=%2250%%22 style=%22dominant-baseline:central;text-anchor:middle;font-size:90px;%22>🤨</text></svg>">
-  <title>Sora WHEP Client</title>
+  <link rel="icon" href="data:,">
+  <title>Sora WHIP Client</title>
 </head>
 
 <body>
