whip-simulcast の e2e-test を追加する

--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -20,6 +20,7 @@
       <li><a href="/messaging/">メッセージングテスト</a></li>
       <li><a href="/data_channel_signaling_only/">データチャンネルテスト</a></li>
       <li><a href="/whip/">WHIP テスト</a></li>
+      <li><a href="/whip_simulcast/">WHIP サイマルキャストテスト</a></li>
       <li><a href="/whep/">WHEP テスト</a></li>
     </ul>
   </div>
