simulcast 配信テストを追加

--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -16,6 +16,8 @@
       <li><a href="/spotlight_sendonly/">スポットライト配信テスト</a></li>
       <li><a href="/spotlight_recvonly/">スポットライト視聴テスト</a></li>
       <li><a href="/simulcast/">サイマルキャスト配信/視聴テスト</a></li>
+      <li><a href="/simulcast_sendonly/">サイマルキャスト配信テスト</a></li>
+      <li><a href="/simulcast_recvonly/">サイマルキャスト視聴テスト</a></li>
       <li><a href="/sendonly_audio/">音声のみ配信テスト</a></li>
       <li><a href="/messaging/">メッセージングテスト</a></li>
       <li><a href="/data_channel_signaling_only/">データチャンネルテスト</a></li>
