コードの整理

--- a/e2e-tests/simulcast_recvonly/index.html
+++ b/e2e-tests/simulcast_recvonly/index.html
@@ -21,7 +21,7 @@
       </select>
     </div>
     <button id="get-stats">getStats</button><br />
-    <div id="local-connection-id" data-testid="local-connection-id"></div>
+    <div id="connection-id"></div>
     <div id="remote-videos"></div>
 
     <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
