--- a/e2e-tests/simulcast_sendonly/index.html
+++ b/e2e-tests/simulcast_sendonly/index.html
@@ -14,7 +14,7 @@
     <button id="get-stats">getStats</button><br />
     <div>
       <h2>sendonly</h2>
-      <div id="local-video-connection-id"></div>
+      <div id="connection-id"></div>
       <video id="local-video" autoplay="" playsinline="" controls=""
         style="width: 320px; height: 180px; border: 1px solid blue;"></video>
     </div>
