320x180 表示をやめる

--- a/e2e-tests/simulcast_sendonly/index.html
+++ b/e2e-tests/simulcast_sendonly/index.html
@@ -15,8 +15,7 @@
     <div>
       <h2>sendonly</h2>
       <div id="connection-id"></div>
-      <video id="local-video" autoplay="" playsinline="" controls=""
-        style="width: 320px; height: 180px; border: 1px solid blue;"></video>
+      <video id="local-video" autoplay="" playsinline="" controls="" style="border: 1px solid blue;"></video>
     </div>
 
     <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
