--- a/e2e-tests/recvonly/index.html
+++ b/e2e-tests/recvonly/index.html
@@ -10,6 +10,8 @@
   <div class="container">
     <h1>Recvonly test</h1>
     <h3 id="sdk-version"></h3>
+    <label for="channel-name">チャンネル名:</label>
+    <input type="text" id="channel-name" name="channel-name" value="sendonly-recvonly"><br>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
