--- a/e2e-tests/whep/index.html
+++ b/e2e-tests/whep/index.html
@@ -18,20 +18,23 @@
   <label for="video-codec-type">ビデオコーデックを選択:</label>
   <select id="video-codec-type">
     <option value="AV1" selected>AV1</option>
-    <!--
     <option value="H264">H264</option>
     <option value="H265">H265</option>
-    -->
   </select><br>
 
   <button id="connect">connect</button>
   <button id="disconnect">disconnect</button>
+  <button id="get-stats">getStats</button><br />
 
   <p>
     <video id="remote-video" autoplay playsinline muted></video>
   </p>
 
   <div id="connection-state"></div>
+
+  <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
+  <div id="stats-report-json"></div>
+
   <script type="module" src="./main.mts"></script>
 </body>
 
