コード整理

--- a/e2e-tests/sendonly_audio/index.html
+++ b/e2e-tests/sendonly_audio/index.html
@@ -10,6 +10,8 @@
 <body>
   <div class="container">
     <h1>Sendonly Audio Test</h1>
+    <label for="channel-name">チャンネル名:</label>
+    <input type="text" id="channel-name" name="channel-name" value="sendonly_audio"><br>
     <label for="audio-codec-type">音声コーデック：</label>
     <select id="audio-codec-type">
       <option value="" selected>未指定</option>
