--- a/e2e-tests/whep/index.html
+++ b/e2e-tests/whep/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <label for="channel-name">チャンネル名:</label>
-  <input type="text" id="channel-name" name="channel-name" value="whip-whep"><br>
+  <input type="text" id="channel-name" name="channel-name" value="whip_whep"><br>
   <label for="video-codec-type">ビデオコーデックを選択:</label>
   <select id="video-codec-type">
     <option value="AV1" selected>AV1</option>
