--- a/e2e-tests/simulcast_recvonly/index.html
+++ b/e2e-tests/simulcast_recvonly/index.html
@@ -9,6 +9,8 @@
 <body>
   <div class="container">
     <h1>Simulcast test</h1>
+    <label for="channel-name">チャンネル名:</label>
+    <input type="text" id="channel-name" name="channel-name" value="simulcast"><br>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
     <div>
