--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -24,6 +24,7 @@
       <li><a href="/whip/">WHIP テスト</a></li>
       <li><a href="/whip_simulcast/">WHIP サイマルキャストテスト</a></li>
       <li><a href="/whep/">WHEP テスト</a></li>
+      <li><a href="/h265/">H265 テスト</a></li>
     </ul>
   </div>
 </body>
