--- a/e2e-tests/sendonly/index.html
+++ b/e2e-tests/sendonly/index.html
@@ -22,7 +22,7 @@
     <div id="stats-report-json"></div>
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
