--- a/e2e-tests/messaging/index.html
+++ b/e2e-tests/messaging/index.html
@@ -42,7 +42,7 @@
     <div id="stats-report-json"></div>
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
